add swap colors
